<resources>
    <string name="app_name">MoneyTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BtnShowToast">Show Toast</string>

    <string name="navDrawer_expenses">Траты</string>
    <string name="navDrawer_categories">Категории</string>
    <string name="navDrawer_statistics">Статистика</string>
    <string name="navDrawer_settings">Настройки</string>
    <string name="txt_user_name">Макеев Михаил</string>
    <string name="txt_email_address">makweb@yandex.ru</string>

    <string name="font_family_roboto_regular">sans-serif</string>
    <string name="font_family_roboto_medium">sans-serif-medium</string>
    <string name="expenses_name">Название траты</string>
    <string name="expenses_price">Сумма</string>
    <string name="expenses_price_hint">1000</string>
    <string name="expenses_name_hint">На что потратил</string>
    <string name="expenses_category">Категории</string>
    <string name="expenses_category_hint">Выбери категорию</string>
    <string name="expenses_date">Дата</string>
</resources>
