<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


    </android.support.design.widget.AppBarLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_height"
        android:background="@color/whiteColor"
        android:columnCount="2"
        android:padding="@dimen/activity_horizontal_margin"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <TextView
            style="@style/FontM.Medium"
            android:layout_width="@dimen/expenses_width"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/expenses_price" />

        <EditText
            style="@style/FontM.Regular"
            android:id="@+id/ted_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expenses_price_hint"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/FontM.Medium"
            android:layout_width="@dimen/expenses_width"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/expenses_name" />

        <EditText
            style="@style/FontM.Regular"
            android:id="@+id/ted_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expenses_name_hint"
            android:inputType="text" />

        <TextView
            style="@style/FontM.Medium"
            android:layout_width="@dimen/expenses_width"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/expenses_category" />

        <Spinner
            style="@style/FontM.Medium"
            android:id="@+id/spin_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expenses_category_hint">
        </Spinner>

        <TextView
            style="@style/FontM.Medium"
            android:layout_width="@dimen/expenses_width"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/expenses_date" />

        <EditText
            style="@style/FontM.Regular"
            android:id="@+id/ted_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </GridLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/abc_floating_window_z"
        android:src="@drawable/ic_add_black_24px"
        app:layout_anchor="@id/coordinator_container"
        app:layout_anchorGravity="bottom|right"
        app:layout_behavior=".Behaviors.ScrollFABBehavior" />
</android.support.design.widget.CoordinatorLayout>


